Add network prefernce to settings